2011-11-07  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests: support --repeat-each feature from old-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=62199

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2011-11-07  Fady Samuel  <fsamuel@chromium.org>

        [Chromium] Rename WebView::scalePage to WebView::setPageScaleFactor to match WebCore
        https://bugs.webkit.org/show_bug.cgi?id=71485

        Reviewed by Darin Fisher.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::scalePageBy):
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::resetTestController):

2011-11-07  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Put the jsc binary in 'bin' instead of leaving it deep in the build tree

        Allows us to not package up the whole Source/JavaScriptCore directory for the
        buildbots.

        Reviewed-by Simon Hausmann.

        * BuildSlaveSupport/built-product-archive:
        * Scripts/webkitdirs.pm:
        (jscProductDir):

2011-11-07  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Ensure we always export symbols for the QtWebKit API when building WebKit

        Reviewed-by Simon Hausmann.

        * qmake/mkspecs/features/default_post.prf:

2011-11-07  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Sanitize qmake paths correctly before comparing

        The qmake function toSanitizedPath had a bug causing empty paths on MinGW,
        which caused us to always generate derived webcore sources, but never build
        them. The bug has been fixed, and we now also sanitize paths for the injected
        bundle derived sources.

        Reviewed by Simon Hausmann.

        * WebKitTestRunner/InjectedBundle/DerivedSources.pri: