@@ -1,3 +1,13 @@
+2011-11-07  Balazs Ankes  <Ankes.Balazs@stud.u-szeged.hu>
+
+        [NRWT] Parsing of test_expectations.txt should be agnostic to newline at end
+        https://bugs.webkit.org/show_bug.cgi?id=70912
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/port/webkit.py: Add newline at the end of test_expectations.txt.
+        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py: Make up the test_test_expectations method for the updated webkit.py.
+
 2011-11-07  Eric Seidel  <eric@webkit.org>
 
         new-run-webkit-tests: support --repeat-each feature from old-run-webkit-tests
